--- a/dotenv.config.example
+++ b/dotenv.config.example
@@ -1,5 +1,5 @@
 NODE_ENV=development
-DB_STRING=mongodb://localhost:27017/weeklist
+DB_STRING=mongodb://0.0.0.0:27017/weeklist
 
 JWT_SECRET_KEY=
 JWT_EXPIRATION=
